Fix ReminderDetailPopup responsive: remove min-width overflow on small screens

--- a/frontend/src/screens/remindersScreen/components/ReminderDetailPopup.scss
+++ b/frontend/src/screens/remindersScreen/components/ReminderDetailPopup.scss
@@ -1,5 +1,6 @@
 .lw-reminderDetail {
-    min-width: 22rem;
+    min-width: 0;
+    width: 100%;
     max-width: 28rem;
     display: flex;
     flex-direction: column;
